--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a manufacturing technician.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from San Diego, CA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to read, paddleboard and watch movies.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be happy with whatever im doing.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in San Diego, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always found web developing interesting.</p>
     </section>
 
     <footer id="footer">
